add funcion para mostrar detalle de un men

--- a/experiencia.html
+++ b/experiencia.html
@@ -20,7 +20,7 @@
 	  <link href="main.css" rel="stylesheet">
 
 	</head>
-	<body>
+	<body class="h-modal">
 		<div class="container">
 			 <nav class="navbar navbar-expand-lg navbar-light">
 			 	<div class="navbar-brand">
