--- a/speaker.html
+++ b/speaker.html
@@ -68,157 +68,157 @@
 						<h2>Bienvenidos los que<br> quieren <span class="font-weight-bold">cambiarlo todo</span></h2>
 					</div>
 
-					<div class="carousel slide" id="demo" data-interval="3000">
-			        <div class="carousel-inner">
-			            <div class="carousel-item active">
-			                <div class="row pt-5 pb-5 pl-3 pr-3">
-								<div class="col-md-3 col-6">
-									<div class="content-men men-1">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Ken Segall
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
+					<div class="carousel slide items" id="demo" data-interval="3000">
+				        <div class="carousel-inner">
+				            <div class="carousel-item active">
+				                <div class="row pt-5 pb-5 pl-3 pr-3">
+									<div class="col-md-3 col-6">
+										<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Ken Segall
 													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
 												</div>
-											</div>
-										</div>						
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6 mt-50">
+										<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Ian Khan
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6">
+										<div class="content-men men-3">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Aric Dromi
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6 mt-50">
+										<div class="content-men men-4">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Pablo Turletti
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
 									</div>
 								</div>
-								<div class="col-md-3 col-6 mt-50">
-									<div class="content-men men-2">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Ian Khan
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
+				            </div>
+				            <div class="carousel-item">
+				               <div class="row pt-5 pb-5 pl-3 pr-3">
+									<div class="col-md-3 col-6">
+										<div class="content-men men-1">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Ken Segall
 													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
 												</div>
-											</div>
-										</div>						
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6 mt-50">
+										<div class="content-men men-2">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Ian Khan
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6">
+										<div class="content-men men-3">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Aric Dromi
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
+									</div>
+									<div class="col-md-3 col-6 mt-50">
+										<div class="content-men men-4">
+											<div class="content-btn">
+												<div class="pb-4">
+													<a href="" class="btn-transparent btn-details">
+														Pablo Turletti
+													</a>
+													<div class="content-arrow">
+														<a href="">
+															<img src="img/logo-arrows.png">
+														</a>
+													</div>
+												</div>
+											</div>						
+										</div>
 									</div>
 								</div>
-								<div class="col-md-3 col-6">
-									<div class="content-men men-3">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Aric Dromi
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-								<div class="col-md-3 col-6 mt-50">
-									<div class="content-men men-4">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Pablo Turletti
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-							</div>
-			            </div>
-			            <div class="carousel-item">
-			               <div class="row pt-5 pb-5 pl-3 pr-3">
-								<div class="col-md-3 col-6">
-									<div class="content-men men-1">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Ken Segall
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-								<div class="col-md-3 col-6 mt-50">
-									<div class="content-men men-2">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Ian Khan
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-								<div class="col-md-3 col-6">
-									<div class="content-men men-3">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Aric Dromi
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-								<div class="col-md-3 col-6 mt-50">
-									<div class="content-men men-4">
-										<div class="content-btn">
-											<div class="pb-4">
-												<a href="" class="btn-transparent btn-details">
-													Pablo Turletti
-												</a>
-												<div class="content-arrow">
-													<a href="">
-														<img src="img/logo-arrows.png">
-													</a>
-												</div>
-											</div>
-										</div>						
-									</div>
-								</div>
-							</div>
-			            </div>
-				        </div>
-				         <!-- Left and right controls -->
-						  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+				            </div>
+					    </div>
+				        <!-- Left and right controls -->
+						<a class="carousel-control-prev" href="#demo" data-slide="prev">
 						    <span class="carousel-control-prev-icon"></span>
-						  </a>
-						  <a class="carousel-control-next" href="#demo" data-slide="next">
+						</a>
+						<a class="carousel-control-next" href="#demo" data-slide="next">
 						    <span class="carousel-control-next-icon"></span>
-						  </a>
+						</a>
 				    </div>
 
 				    <div class="row pt-5 pb-5 pl-3 pr-3 show-mobile">
 						<div class="col-md-6 col-lg-3 col-6">
-							<div class="content-men men-1">
+							<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -234,7 +234,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
-							<div class="content-men men-2">
+							<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -287,11 +287,119 @@
 			</div>
 		</div>
 
-
+		 <!-- The Modal speaker-->
+		<div class="modal fade modal-speaker" id="modal-speaker-1" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+		  <div class="modal-dialog modal-dialog-centered" role="document">
+		    <div class="modal-content">
+			    <div class="modal-header border-0">
+			        <button type="button" class="btn btn-close" data-dismiss="modal" aria-label="Close">
+			        	<img src="img/logo-close.png">
+			        </button>
+			    </div>
+			    <div class="modal-body">
+			    	<div class="carousel slide" id="modal-carousel">
+				    	<div class="carousel-inner">
+				            <div class="carousel-item m-1">
+				                <div class="row m-0">
+									<div class="col-md-4 pl-0 col-6">
+										<img src="img/men-1.png" class="w-100">
+									</div>
+									<div class="col-md-8 col-6">
+										<div class="content-info-speaker">
+											<h1>Ken Segall</h1>
+											<hr>
+											<div class="text-infor text-infor-0" style="display: none;">
+												<p class="pt-2">Ken Segall trabajó durante 12 años junto a Steve Jobs ayudando a comercializar los productos de Apple que cambiarían la historia, e hizo parte del equipo que trabajó en la campaña Think Different, que fue pieza esencial para retomar la vida de la marca Apple, y fue coautor del famoso comercial The Crazy Ones, el primero en ganar un premio Emmy.<br> Además de haber participado en la creación de la leyenda de esta famosa compañía, también ha colaborado en la publicidad de marcas reconocidas mundialmente como Intel, Dell e IBM, y ha escrito dos libros: el NY Times Best Seller, Insanely Simple, y luego Think Simple. Y también fue el creador del nombre iMac, el cual ha guiado a los nombres de los revolucionarios productos de Apple durante años.</p>
+												<p>Ken Segall ha estado presente durante algunos de los más grandes cambios que la publicidad ha debido enfrentar: el auge de los computadores, el internet y las redes sociales, entre otros. Y en un momento cuando la publicidad se encontraba reacia al cambio y hallaba tan difícil adaptarse al mismo. Sin embargo, a pesar de no ser un proceso fácil o siquiera suave, se adaptó a estos cambios viendo sus conflictos tan solo como parte de la transición.<br> Sé de los que hablan de lo Increíblemente Simple con Ken Segall, quien fue Director Creativo de las agencias encargadas de la publicidad de Apple y NeXT.</p>
+											</div>
+											<div class="text text-0">
+												<p class="pt-2">"Debería ser considerado una regla básica del<br> comercio: La simplicidad atrae".</p>
+											</div>
+										</div>
+										<div class="content-btn-more content-btn-more-0">
+											<button type="button" class="btn btn-more" onclick="showInfo(0)">Ver más</button>
+										</div>
+									</div>
+								</div>
+				            </div>
+				            <div class="carousel-item m-2">
+				                <div class="row m-0">
+									<div class="col-md-4 col-6 pl-0">
+										<img src="img/men-2.png" class="w-100">
+									</div>
+									<div class="col-md-8 col-6">
+										<div class="content-info-speaker">
+											<h1>Ian Khan </h1>
+											<hr>
+											<div class="text-infor text-infor-1" style="display: none;">
+												<p class="pt-2">Ian Khan es un experto en tecnología emergente, colaborador de Forbes, y de Futurist Technology -destacado en CNN, autor de TEDx y de más de 8 libros que incluyen: Cloud Wars, The Internet of Things, A Concise Introduction, The Internet of Things & the Future of Innovation, Make Me Like You, 21 Steps, y Get Ahead and Meaningful Conversations.</p>
+												<p>Durante sus 20 años de carrera ha impactado a más de 5.000 organizaciones, ayudándolas a entender la tecnología emergente y los pasos que pueden tomar para crear un valor ilimitado, y asesorándolas para obtener una ventaja competitiva en la era actual de interrupciones y cambios rápidos.</p>
+												<p>Khan es una de esas personas completamente conscientes del caos que se vive actualmente en el mundo, que afecta sobre todo a los niños -que son los futuros líderes. Está convencido del potencial que tenemos los seres humanos y por ello está en una misión por sacar ese potencial a la luz. Sabe que tenemos que prepararnos para poder llevar a cabo el cambio que el planeta y las sociedades tanto necesitan, y por eso está involucrado con asociaciones que trabajan el pro del cambio y el futuro.</p>
+												<p>Sus temas principales son las tendencias tecnológicas, las perspectivas de futuro de la industria y el papel de IoT, AI y BlockChain en la configuración de nuestro futuro.</p>
+											</div>
+											<div class="text text-1">
+												<p class="pt-2">"Debería ser considerado una regla básica del<br> comercio: La simplicidad atrae".</p>
+											</div>
+										</div>
+										<div class="content-btn-more content-btn-more-1">
+											<button type="button" class="btn btn-more" onclick="showInfo(1)">Ver más</button>
+										</div>
+									</div>
+								</div>
+				            </div>
+				        </div>
+				         <!-- Left and right controls -->
+						<a class="carousel-control-prev" href="#modal-carousel" data-slide="prev">
+						    <span class="carousel-control-prev-icon"></span>
+						</a>
+						<a class="carousel-control-next" href="#modal-carousel" data-slide="next">
+						    <span class="carousel-control-next-icon"></span>
+						</a>
+					</div>
+			    </div>
+			    </div>
+	      	</div>
+		  </div>
+		</div>
+		 <!-- End Modal -->
 
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+		 <script type="text/javascript">
+		 	$(document).ready(function(){
+		 		var contentBtn = $( ".content-btn-more");
+		 		var text = $( ".text" );
+		 		var textInfor = $('.text-infor' );
+				$('.content-men').click(function(){
+					var clsManNumber = this.id;
+
+					var items = $('.modal-speaker .carousel-inner .carousel-item');					
+					for (var i = 0; i < items.length; i++) {
+						var clasesO = items[i].classList;
+						items[i].classList.remove("active");
+						if (clasesO[1] == clsManNumber) {
+							var item = items[i];
+							item.className += " active";
+						}
+					}
+					$( ".content-btn-more" ).show();
+				  	$( ".text" ).show();
+				  	$('.text-infor').hide();
+				});
+			});
+
+			function showInfo(num) {
+				var contentBtn = document.getElementsByClassName('content-btn-more');
+				var text = document.getElementsByClassName('text');
+				var textInfor = document.getElementsByClassName('text-infor');
+				contentBtn[num].style.display = 'none';
+				text[num].style.display = 'none';
+				textInfor[num].style.display = 'block';
+	 		}
+		 </script>
 	</body>
 </html>
