--- a/speaker.html
+++ b/speaker.html
@@ -141,7 +141,7 @@
 				            <div class="carousel-item">
 				               <div class="row pt-5 pb-5 pl-3 pr-3">
 									<div class="col-md-3 col-6">
-										<div class="content-men men-1" id="m-5" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-5" id="m-5" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -157,7 +157,7 @@
 										</div>
 									</div>
 									<div class="col-md-3 col-6 mt-50">
-										<div class="content-men men-2" id="m-6" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-6" id="m-6" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -173,7 +173,7 @@
 										</div>
 									</div>
 									<div class="col-md-3 col-6">
-										<div class="content-men men-3" id="m-7" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-7" id="m-7" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -189,7 +189,7 @@
 										</div>
 									</div>
 									<div class="col-md-3 col-6 mt-50">
-										<div class="content-men men-4" id="m-8" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-8" id="m-8" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -209,7 +209,7 @@
 				            <div class="carousel-item">
 				               <div class="row pt-5 pb-5 pl-3 pr-3">
 									<div class="col-md-3 col-6">
-										<div class="content-men men-1" id="m-9" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-9" id="m-9" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -225,7 +225,7 @@
 										</div>
 									</div>
 									<div class="col-md-3 col-6 mt-50">
-										<div class="content-men men-2" id="m-10" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-10" id="m-10" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -241,7 +241,7 @@
 										</div>
 									</div>
 									<div class="col-md-3 col-6">
-										<div class="content-men men-3" id="m-11" data-toggle="modal" data-target="#modal-speaker-1">
+										<div class="content-men men-11" id="m-11" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details">
@@ -256,7 +256,7 @@
 											</div>						
 										</div>
 									</div>
-									<div class="col-md-3 col-6 mt-50">
+									<!--<div class="col-md-3 col-6 mt-50">
 										<div class="content-men men-4" id="m-12" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
@@ -271,7 +271,7 @@
 												</div>
 											</div>						
 										</div>
-									</div>
+									</div>-->
 								</div>
 				            </div>
 					    </div>
@@ -350,7 +350,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6">
-							<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-5" id="m-5" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -366,7 +366,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
-							<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-6" id="m-6" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -382,7 +382,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6">
-							<div class="content-men men-3" id="m-3" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-7" id="m-7" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -398,7 +398,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
-							<div class="content-men men-4" id="m-4" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-8" id="m-8" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -414,7 +414,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6">
-							<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-9" id="m-9" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -430,7 +430,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6 mt-50">
-							<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-10" id="m-10" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -446,7 +446,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 col-6">
-							<div class="content-men men-3" id="m-3" data-toggle="modal" data-target="#modal-speaker-1">
+							<div class="content-men men-11" id="m-11" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details">
@@ -461,7 +461,7 @@
 								</div>						
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-3 col-6 mt-50">
+						<!--<div class="col-md-6 col-lg-3 col-6 mt-50">
 							<div class="content-men men-4" id="m-4" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
@@ -476,7 +476,7 @@
 									</div>
 								</div>						
 							</div>
-						</div>
+						</div>-->
 					</div>
 
 				</div>
@@ -546,7 +546,7 @@
 				            <div class="carousel-item m-3">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-3.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -571,7 +571,7 @@
 				            <div class="carousel-item m-4">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-4.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -596,7 +596,7 @@
 				            <div class="carousel-item m-5">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-5.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -621,7 +621,7 @@
 				            <div class="carousel-item m-6">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-6.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -647,7 +647,7 @@
 				            <div class="carousel-item m-7">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-7.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -671,7 +671,7 @@
 				            <div class="carousel-item m-8">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-8.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -695,7 +695,7 @@
 				            <div class="carousel-item m-9">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-9.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -720,7 +720,7 @@
 				            <div class="carousel-item m-10">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-10.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -744,7 +744,7 @@
 				            <div class="carousel-item m-11">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
-										<img src="img/men-2.png" class="w-100">
+										<img src="img/men-11.png" class="w-100">
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
@@ -766,7 +766,7 @@
 									</div>
 								</div>
 				            </div>
-				            <div class="carousel-item m-12">
+				            <!--<div class="carousel-item m-12">
 				                <div class="row m-0">
 									<div class="col-md-4 col-6 pl-0">
 										<img src="img/men-2.png" class="w-100">
@@ -789,7 +789,7 @@
 										</div>
 									</div>
 								</div>
-				            </div>
+				            </div>-->
 				        </div>
 				         <!-- Left and right controls -->
 						<a class="carousel-control-prev" href="#modal-carousel" data-slide="prev">
