agregar redirec en modal

--- a/speaker.html
+++ b/speaker.html
@@ -76,11 +76,11 @@
 										<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ken Segall
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -92,11 +92,11 @@
 										<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ian Khan
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -108,11 +108,11 @@
 										<div class="content-men men-3" id="m-3" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Aric Dromi
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -124,11 +124,11 @@
 										<div class="content-men men-4" id="m-4" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Pablo Turletti
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -144,11 +144,11 @@
 										<div class="content-men men-5" id="m-5" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ken Segall
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -160,11 +160,11 @@
 										<div class="content-men men-6" id="m-6" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ian Khan
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -176,11 +176,11 @@
 										<div class="content-men men-7" id="m-7" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Aric Dromi
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -192,11 +192,11 @@
 										<div class="content-men men-8" id="m-8" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Pablo Turletti
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -212,11 +212,11 @@
 										<div class="content-men men-9" id="m-9" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ken Segall
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -228,11 +228,11 @@
 										<div class="content-men men-10" id="m-10" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Ian Khan
 													</a>
 													<div class="content-arrow">
-														<a href="">
+														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 															<img src="img/logo-arrows.png">
 														</a>
 													</div>
@@ -244,10 +244,10 @@
 										<div class="content-men men-11" id="m-11" data-toggle="modal" data-target="#modal-speaker-1">
 											<div class="content-btn">
 												<div class="pb-4">
-													<a href="" class="btn-transparent btn-details">
+													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 														Aric Dromi
 													</a>
-													<div class="content-arrow">
+													<div class="content-arrow" data-toggle="modal" data-target="#modal-speaker-1">
 														<a href="">
 															<img src="img/logo-arrows.png">
 														</a>
@@ -289,11 +289,11 @@
 							<div class="content-men men-1" id="m-1" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ken Segall
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -305,11 +305,11 @@
 							<div class="content-men men-2" id="m-2" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ian Khan
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -321,11 +321,11 @@
 							<div class="content-men men-3" id="m-3" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Aric Dromi
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -337,11 +337,11 @@
 							<div class="content-men men-4" id="m-4" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Pablo Turletti
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -353,11 +353,11 @@
 							<div class="content-men men-5" id="m-5" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ken Segall
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -369,11 +369,11 @@
 							<div class="content-men men-6" id="m-6" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ian Khan
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -385,11 +385,11 @@
 							<div class="content-men men-7" id="m-7" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Aric Dromi
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -401,11 +401,11 @@
 							<div class="content-men men-8" id="m-8" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Pablo Turletti
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -417,11 +417,11 @@
 							<div class="content-men men-9" id="m-9" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ken Segall
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -433,11 +433,11 @@
 							<div class="content-men men-10" id="m-10" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Ian Khan
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
@@ -449,11 +449,11 @@
 							<div class="content-men men-11" id="m-11" data-toggle="modal" data-target="#modal-speaker-1">
 								<div class="content-btn">
 									<div class="pb-4">
-										<a href="" class="btn-transparent btn-details">
+										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
 											Aric Dromi
 										</a>
 										<div class="content-arrow">
-											<a href="">
+											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
 												<img src="img/logo-arrows.png">
 											</a>
 										</div>
