Agregando nuevas imagenes

--- a/speaker.html
+++ b/speaker.html
@@ -145,7 +145,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Ken Segall
+														Verónica Ruíz del Vizo
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -161,7 +161,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Ian Khan
+														Arnaldo Muñoz 
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -177,7 +177,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Aric Dromi
+														Jonatan Loidi
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -193,7 +193,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Pablo Turletti
+														Diego Ruzzarin
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -213,7 +213,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Ken Segall
+														Omar Carrión
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -229,7 +229,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Ian Khan
+														Douglas Tsukimoto
 													</a>
 													<div class="content-arrow">
 														<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -245,7 +245,7 @@
 											<div class="content-btn">
 												<div class="pb-4">
 													<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-														Aric Dromi
+														Rodrigo Fernández
 													</a>
 													<div class="content-arrow" data-toggle="modal" data-target="#modal-speaker-1">
 														<a href="">
@@ -354,7 +354,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Ken Segall
+											Verónica Ruíz del Vizo
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -370,7 +370,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Ian Khan
+											Arnaldo Muñoz
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -386,7 +386,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Aric Dromi
+											Jonatan Loidi
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -402,7 +402,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Pablo Turletti
+											Diego Ruzzarin
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -418,7 +418,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Ken Segall
+											Omar Carrión
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -434,7 +434,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Ian Khan
+											Douglas Tsukimoto
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -450,7 +450,7 @@
 								<div class="content-btn">
 									<div class="pb-4">
 										<a href="" class="btn-transparent btn-details" data-toggle="modal" data-target="#modal-speaker-1">
-											Aric Dromi
+											Rodrigo Fernández
 										</a>
 										<div class="content-arrow">
 											<a href="" data-toggle="modal" data-target="#modal-speaker-1">
@@ -550,7 +550,7 @@
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
-											<h1>AricDromi</h1>
+											<h1>Aric Dromi</h1>
 											<hr>
 											<div class="text-infor text-infor-2" style="display: none;">
 												<p class="pt-2">AricDromi es un Futurólogo Automotriz que forma parte esencial de uno de los fabricantes de vehículos más respetados del mundo y un desarrollador líder de vehículos premium, autónomos y eléctricos. Ha buscado nuevas formas de pensar sobre cómo funcionan las cosas. Explica el futuro,lo hace tangible y -lo más importante- lo hace relevante. Y así es que cuenta historias sobre el mismo que podrían suceder, y ayuda a desarrollar los conceptos sobre lo que “debería suceder”.</p>
@@ -651,7 +651,7 @@
 									</div>
 									<div class="col-md-8 col-6">
 										<div class="content-info-speaker">
-											<h1>JonatanLoidi</h1>
+											<h1>Jonatan Loidi</h1>
 											<hr>
 											<div class="text-infor text-infor-6" style="display: none;">
 												<p class="pt-2">Conocido por la frase “El cambio ya no es una opción, es una obligación”, JonatanLoidi es Conferencista y Consultor internacional. ¿Sus temáticas? Marketing, ventas, innovación, estrategia, negociación, liderazgo y motivación. ¿Cómo perciben sus charlas? Inspiradoras y altamente aplicables a la práctica diaria de las organizaciones. También es especialista en desarrollo de áreas comerciales en empresas pequeñas, medianas y grandes. Es un profundo conocedor de las problemáticas del mundo PYME, siendo un referente en esta área.</p>
